--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,10 @@ android:
 #   - adb shell input keyevent 82 &
   
 script:
-  - ./gradlew :eventlist:assembleDebug
-  - ./gradlew :eventlist:assembleRelease
+#  - ./gradlew :eventlist:assembleDebug
+#  - ./gradlew :eventlist:assembleRelease
+  - ./gradlew assembleDebug
+  - ./gradlew assembleRelease
 #  - ./gradlew :eventlist:jacocoTestReportDebug coveralls
 #  - ./gradlew testDebugUnitTest
 #  - ./gradlew createDebugCoverageReport coveralls
